# audacious-plugin-albums

./: README.md
src/: meson.build
src/album-browser/: INSTALL.md  Makefile.standalone  PKGBUILD  README.md  album-browser.cc  album.h  meson.build  metadata.cc  metadata.h  scanner.cc  scanner.h
src/gtkui/: ui_gtk.cc
